-Now when you insert/remove column/row/cell and there is a chart you refresh it.

2000-08-04-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Fix a big bug in dependence cell for example =A1+C1
Now it works correctly.

2000-08-06-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-fixed :Bug#7608
-Improved kspread_dlg_formula now when there is a text into cell
before to call kspread_dlg_formula, kspread used this text
and add '=' at the beginning and "+" at the end
=>you can completed a formula into kspread_dlg_formula.
For example in cell A1 : =cos(12)
=>call kspread_dlg_formula => =cos(12)+
cell A1 : 10
=>call : =10+

2000-08-11-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
Bug Fix :
Now when you dissociate cells, extrawidth=0
extraheight=0.

2000-08-13-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
Bug fix :
selected an area and press Enter, so you moved
into this area
=>now it reworks

2000-08-14-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Redraw problem when selecting cells with a border
* F2 switches from cell to edit-widget
* Layout fixes
* Fixes for undo/redo
* Fixes for copy and paste of cells with extra width

2000-08-18-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Appearance fix when clicking a single cell: doesn't
  look like a selection in the row/column headers anymore.
* Allow to change the number format for an empty cell.
* Pressing Enter in the edit widget without changing the
  value doesn't clear the cell anymore.

2000-08-18-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Implemented Undo/Redo on column/row resizing
* Another fix for merged cells (conditionnal formatting).
