@@ -3362,6 +3362,11 @@ void KSpreadTable::clearSelection( const QPoint &_marker )
         if ( !selected )
             r.setCoords( _marker.x(), _marker.y(), _marker.x(), _marker.y() );
 
+        if ( !m_pDoc->undoBuffer()->isLocked() )
+        {
+                KSpreadUndoClearCell *undo = new KSpreadUndoClearCell( m_pDoc, this, r );
+                m_pDoc->undoBuffer()->appendUndo( undo );
+        }
 
         for ( int x = r.left(); x <= r.right(); x++ )
             for ( int y = r.top(); y <= r.bottom(); y++ )
